--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@ font-family: 'Saira Condensed', sans-serif; */
     --complex: rgb(201, 140, 201);
     --color:#340045;
     --color1:rgba(54, 21, 54, 0.706);
-    --gap:.6rem;
+    --gap:1%;
 }
 body {
     background-color: rgb(255, 255, 255);
@@ -365,10 +365,10 @@ h3 {
 .section3-header {
     color: var(--tertiary);
     font-size: 2.6rem;
-    /* background-color: red; */
     text-align: center;
-    /* width: 750px; */
-    margin: 0 auto;
+    padding: 4rem 0 0 0 ;
+    width: 100%;
+    
 }
 .section3-header span {
     color: var(--complex);
@@ -752,6 +752,28 @@ footer {
     }
     .section3-header span:nth-child(1):after, .section3-header span:nth-child(2):after, .section3-header span:nth-child(3):after{
         font-size: 1rem;
+        word-spacing: 0;
+        top: -1.4rem;
+    }
+}
+@media only screen and (max-width:400px){
+    .links img{
+        width: 90px;
+    }
+}
+@media only screen and (max-width:365px){
+    .links img{
+        width: 80px;
+    }
+}
+@media only screen and (max-width:350px){
+    .section3-header{
+        font-size: 1.2rem;
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .section3-header span:nth-child(1):after, .section3-header span:nth-child(2):after, .section3-header span:nth-child(3):after{
+        font-size: .9rem;
         word-spacing: 0;
         top: -1.4rem;
     }
